--- a/BowlingCoreMVC/Views/_ViewImports.cshtml
+++ b/BowlingCoreMVC/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using BowlingCoreMVC.Models.AccountViewModels
 @using BowlingCoreMVC.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BowlingCoreMVC
