--- a/BowlingCoreMVC/Views/Game/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Game/Edit.cshtml
@@ -8,30 +8,8 @@
     var m = Model;
 }
 <h2>Edit</h2>
-
-<table class="table table-bordered table-condensed">
-    <thead>
-        <tr>
-            @*OR just 1-10..*@
-            @foreach (var f in Model.Frames)
-            {
-                <th>
-                    @f.FrameNum
-                </th>
-
-            }
-        </tr>
-    </thead>
-    <tr>
-        @foreach (var f in Model.Frames)
-        {
-            
-            <frame-throw frame="@f"></frame-throw>
-            
-
-        }
-    </tr>
-</table>
+@* The Model.ID here will be in a for each loop later (for each game in series, etc) *@
+@await Component.InvokeAsync("EditGame", new { GameID = Model.ID })
 
 @* TODO: this didn't work in the site.css file?? *@
 <style type="text/css">
