--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -1,6 +1,8 @@
 ﻿@model BowlingCoreMVC.Models.Game
 
+<input type="hidden" id="'@Model.ID'_GameID" value="@Model.ID" />
 
+@Html.HiddenFor(mod => mod.ID, new { @id = Model.ID + "_GameID" })
 
 <table class="table table-bordered table-condensed">
     <thead>
@@ -8,9 +10,15 @@
             @*OR just 1-10..*@
             @foreach (var f in Model.Frames)
             {
-                <th>
-                    @f.FrameNum
-                </th>
+                if (f.FrameNum != 10)
+                {
+                    <th colspan="2">@f.FrameNum</th>
+                }
+                else
+                {
+                    <th colspan="3">@f.FrameNum</th>
+                }
+
 
             }
         </tr>
@@ -19,14 +27,78 @@
         @foreach (var f in Model.Frames)
         {
 
-            <frame-throw frame="@f"></frame-throw>
+            <frame-throw frame="@f" throw-num="1"></frame-throw>
+            <frame-throw frame="@f" throw-num="2"></frame-throw>
 
+            if (f.FrameNum == 10)
+            {
+                <frame-throw frame="@f" throw-num="3"></frame-throw>
+            }
 
         }
     </tr>
 </table>
 
+
+<div class="col-sm-12">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_7" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_8" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_9" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_10" />
+            </div>
+        </div>
+    </div>
+    <div class="row"><br /></div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_4" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_5" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_6" />
+            </div>
+        </div>
+    </div>
+    <div class="row"><br /></div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_2" />
+            </div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_3" />
+            </div>
+        </div>
+    </div>
+    <div class="row"><br /></div>
+    <div class="row">
+
+        <div class="col-sm-4">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-2">
+                <input type="checkbox" id="Missed_1" />
+            </div>
+        </div>
+    </div>
+</div>
+
 <input type="hidden" id="hidGameID" value="@Model.ID" />
 
-<input type="button" class="btn btn-default" value="<--- PREVIOUS THROW" onclick="" />
+
+<input type="button" class="btn btn-success" value="Save" onclick="SaveGame(@Model.ID)" />
+<input type="button" class="btn btn-default" value="<--- PREVIOUS THROW" onclick="PreviousThrow(@Model.ID)" />
 <input type="button" class="btn btn-default" value="NEXT THROW --->" onclick="NextThrow(@Model.ID)" />
