--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -37,6 +37,13 @@
 
         }
     </tr>
+    <tr>
+        @foreach (var f in Model.Frames)
+        {
+            <frame-score frame="@f"></frame-score>
+
+        }
+    </tr>
 </table>
 
 
