--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -39,7 +39,7 @@
 
 /* custom */
 
-.frameBox {
+/*.frameBox {
     border: 1px solid black;
     padding: 3px;
     margin-left: 60%;
@@ -48,4 +48,41 @@
 .frameBox3 {
     border: 1px solid black;
     padding: 3px;
+}*/
+
+#PinsTable td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#PinsTable {
+    width: 100%;
+    max-width: 200px;
+}
+
+input[type='checkbox'].pins-checkbox + label:before,
+input[type='checkbox'].pins-checkbox + label:after {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-size: 2.5em;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+input[type='checkbox'].pins-checkbox + label:before { /*unchecked icon*/
+    //content: "\e157";
+    //content: "\e090";
+    //content: "\e089";
+    //content: "\e017";
+    content: "\25cb";
+}
+
+input[type='checkbox']:checked.pins-checkbox + label:before { /*checked icon*/
+    //content: "\e165";
+    content: "\25cf";
 }
