--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
+                    <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
