--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -78,15 +78,109 @@ input[type='checkbox'].pins-checkbox + label:after {
     -moz-osx-font-smoothing: grayscale;
 }
 
-input[type='checkbox'].pins-checkbox + label:before { /*unchecked icon*/
+/* Unchecked icon
+input[type='checkbox'].pins-checkbox + label:before {
     //content: "\e157";
     //content: "\e090";
     //content: "\e089";
     //content: "\e017";
     content: "\25cb";
 }
+*/
 
 input[type='checkbox']:checked.pins-checkbox + label:before { /*checked icon*/
     //content: "\e165";
     content: "\25cf";
+}
+
+input[type='checkbox']:disabled.pins-checkbox + label:before {
+    content: "\2298"; //"\e090";
+    font-size: 2em;
+}
+
+/*
+    1: \2460
+    2: \2461
+    3: \2462
+    4: \2463
+    5: \2464
+    6: \2465
+    7: \2466
+    8: \2467
+    9: \2468
+    10: \2469
+
+
+*/
+
+input[type='checkbox'][id$="-Missed_1"] + label:before {
+    content: "\2460";
+}
+input[type='checkbox'][id$="-Missed_2"] + label:before {
+    content: "\2461";
+}
+input[type='checkbox'][id$="-Missed_3"] + label:before {
+    content: "\2462";
+}
+input[type='checkbox'][id$="-Missed_4"] + label:before {
+    content: "\2463";
+}
+input[type='checkbox'][id$="-Missed_5"] + label:before {
+    content: "\2464";
+}
+input[type='checkbox'][id$="-Missed_6"] + label:before {
+    content: "\2465";
+}
+input[type='checkbox'][id$="-Missed_7"] + label:before {
+    content: "\2466";
+}
+input[type='checkbox'][id$="-Missed_8"] + label:before {
+    content: "\2467";
+}
+input[type='checkbox'][id$="-Missed_9"] + label:before {
+    content: "\2468";
+}
+input[type='checkbox'][id$="-Missed_10"] + label:before {
+    content: "\2469";
+}
+
+
+input[type='checkbox'][id$="-Missed_1"]:checked + label:before {
+    content: "\278A";
+}
+
+input[type='checkbox'][id$="-Missed_2"]:checked + label:before {
+    content: "\278B";
+}
+
+input[type='checkbox'][id$="-Missed_3"]:checked + label:before {
+    content: "\278C";
+}
+
+input[type='checkbox'][id$="-Missed_4"]:checked + label:before {
+    content: "\278D";
+}
+
+input[type='checkbox'][id$="-Missed_5"]:checked + label:before {
+    content: "\278E";
+}
+
+input[type='checkbox'][id$="-Missed_6"]:checked + label:before {
+    content: "\278F";
+}
+
+input[type='checkbox'][id$="-Missed_7"]:checked + label:before {
+    content: "\2790";
+}
+
+input[type='checkbox'][id$="-Missed_8"]:checked + label:before {
+    content: "\2791";
+}
+
+input[type='checkbox'][id$="-Missed_9"]:checked + label:before {
+    content: "\2792";
+}
+
+input[type='checkbox'][id$="-Missed_10"]:checked + label:before {
+    content: "\2793";
 }
