--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
                     <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
+                    <li><a asp-area="" asp-controller="Leagues" asp-action="Index">Leagues</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
