--- a/BowlingCoreMVC/Views/Series/Create.cshtml
+++ b/BowlingCoreMVC/Views/Series/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Leagues" class="control-label"></label>
-                <select asp-for="Leagues" asp-items="@Model.Leagues">
-                    <option>Optional League</option>    
+                <label asp-for="LeagueID" class="control-label"></label>
+                <select asp-for="LeagueID" asp-items="@Model.Leagues">
+                    <option value="0">Optional League</option>    
                 </select>
                 <span asp-validation-for="Leagues" class="text-danger"></span>
             </div>
