--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -19,12 +19,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" class="form-control" asp-format="{0:MM/dd/yyyy}" />
+                @Html.EditorFor(m => m.StartDate, new { @class = "form-control"})
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
+                <input asp-for="EndDate" class="form-control" asp-format="{0:MM/dd/yyyy}" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
