--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Game" asp-action="Index">My Games</a></li>
                     <li><a asp-area="" asp-controller="Series" asp-action="Index">My Series</a></li>
                     <li><a asp-area="" asp-controller="Leagues" asp-action="Index">Leagues</a></li>
+                    <li><a asp-area="" asp-controller="Locations" asp-action="Index">Locations</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
