--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BowlingCoreMVC.Models.League
+﻿@model BowlingCoreMVC.Models.GameViewModels.GameViewModels.LeagueViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,14 +13,23 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="LeagueName" class="control-label"></label>
+                <input asp-for="LeagueName" class="form-control" />
+                <span asp-validation-for="LeagueName" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="LocationID" class="control-label"></label>
+                <select asp-for="LocationID" asp-items="@Model.Locations" class="form-control">
+                    <option>---Location---</option>
+                </select>
+                <span asp-validation-for="LocationID" class="text-danger"></span>
+            </div>
+
+
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" asp-format="{0:MM/dd/yyyy}" />
-                @Html.EditorFor(m => m.StartDate, new { @class = "form-control"})
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
