--- a/BowlingCoreMVC/Views/Leagues/Delete.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this? You CANNOT revert this action.</h3>
+<h4>Any Series created under this League will be dissassociated with this and be marked as No League.</h4>
 <div>
-    <h4>League</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -16,12 +16,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedByID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedByID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StartDate)
@@ -35,23 +29,11 @@
         <dd>
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
