--- a/BowlingCoreMVC/Views/Series/Create.cshtml
+++ b/BowlingCoreMVC/Views/Series/Create.cshtml
@@ -14,14 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="LeagueID" class="control-label"></label>
-                <select asp-for="LeagueID" asp-items="@Model.Leagues">
-                    <option value="0">Optional League</option>    
+                <select asp-for="LeagueID" asp-items="@Model.Leagues" class="form-control">
+                    <option value="0">---No League---</option>    
                 </select>
-                <span asp-validation-for="Leagues" class="text-danger"></span>
+                @*<span asp-validation-for="Leagues" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="NumberOfGames" class="control-label"></label>
-                <input asp-for="NumberOfGames" class="form-control" />
+                <input asp-for="NumberOfGames" class="form-control" id="NumOfGames" min="2" max="9" value="3"/>
                 <span asp-validation-for="NumberOfGames" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -34,4 +34,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
