--- a/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/EditGame/Default.cshtml
@@ -62,6 +62,8 @@
     <div class="col-sm-4">
         <button class="btn btn-default btn-sm" onclick="PreviousClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-left" /></button>
         <button class="btn btn-default btn-sm" onclick="NextClickSendGame(@Model.ID)"><span class="glyphicon glyphicon-arrow-right" /></button>
+        <br />
+        <input type="button" class="btn btn-success btn-block" value="Save" onclick="SaveGameClick(@Model.ID)" />
     </div>
     @*<div class="col-sm-2">
         
@@ -116,6 +118,6 @@
 </style>
 
 
-<input type="button" class="btn btn-success" value="Save" onclick="SaveGameClick(@Model.ID)" />
+
 
 
